# libsig

./: CMakeLists.txt  README.md  conanfile.py  license.md  readme.md
cmake/: version.hpp.in
include/: controller_pid.hpp  create_signal.hpp  filter_moving_average.hpp  pid-controller.hpp  power_analysis.hpp
src/: controller_pid.hpp  create_signal.hpp  filter_moving_average.hpp  libsig.cpp  pid-controller.cpp  power_analysis.hpp
test/: CMakeLists.txt  test_filter_moving_average.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp  test_controller_pid.cpp  test_filter_moving_average.cpp  test_power_analysis.cpp
